--- a/test/index.html
+++ b/test/index.html
@@ -1,187 +1,4 @@
-import { config } from '@/config';
-import {
-  DialogRoot,
-  DialogContent,
-  DialogHeader,
-  DialogBody,
-  DialogFooter,
-  DialogTitle,
-  DialogCloseTrigger,
-  Button,
-  Text,
-  HStack,
-  Input,
-  Textarea,
-  Box,
-  Field,
-} from '@chakra-ui/react';
-import { useState } from 'react';
-import { useMutation, useQueryClient } from '@tanstack/react-query';
-import { toaster } from '@loim/loim-ui';
-
-interface UnrestrictIssuerModalProps {
-  open: boolean;
-  onClose: () => void;
-  issuer?: any | null; // keeps it flexible to match your payload shape
-}
-
-export function UnrestrictIssuerModal({
-  open,
-  onClose,
-  issuer,
-}: UnrestrictIssuerModalProps) {
-  const queryClient = useQueryClient();
-
-  const [dateUnrestricted, setDateUnrestricted] = useState('');
-  const [requester, setRequester] = useState('');
-  const [notes, setNotes] = useState('');
-
-  const unrestrictMutation = useMutation({
-    mutationFn: async (payload: {
-      categoryName: string;
-      dateUnrestricted: string;
-      issuerName: string;
-      unrestrictRequestor: string;
-      notes?: string | null;
-    }) => {
-      const url = `${config.apis.mdmApi}/UnrestrictIssuer`;
-      const res = await fetch(url, {
-        method: 'PUT',
-        credentials: 'include',
-        headers: {
-          'Content-Type': 'application/json',
-        },
-        body: JSON.stringify(payload),
-      });
-
-      if (!res.ok) {
-        const txt = await res.text().catch(() => '');
-        throw new Error(`Failed to unrestrict issuer: ${res.status} ${txt}`);
-      }
-      return res.json();
-    },
-    onSuccess: () => {
-      queryClient.invalidateQueries({ queryKey: ['restricted-issuers'] });
-      toaster.create({
-        title: 'Issuer Unrestricted',
-        description: 'The issuer has been unrestricted successfully.',
-        type: 'success',
-        duration: 3000,
-      });
-      onClose();
-    },
-    onError: (err) => {
-      toaster.create({
-        title: 'Error',
-        description:
-          (err as Error)?.message || 'Failed to unrestrict issuer. Try again later.',
-        type: 'error',
-        duration: 3000,
-      });
-    },
-  });
-
-  if (!issuer) return null;
-
-  const handleSubmit = async () => {
-    // basic client-side validation
-    if (!dateUnrestricted) {
-      toaster.create({
-        title: 'Validation',
-        description: 'Please provide Restriction End Date.',
-        type: 'error',
-        duration: 3000,
-      });
-      return;
-    }
-    if (!requester) {
-      toaster.create({
-        title: 'Validation',
-        description: 'Please provide Requester for un-restriction.',
-        type: 'error',
-        duration: 3000,
-      });
-      return;
-    }
-
-    const payload = {
-      categoryName: issuer?.restrictionCategory?.name ?? '',
-      dateUnrestricted,
-      issuerName: issuer?.validatedIssuerName ?? issuer?.issuerName ?? '',
-      unrestrictRequestor: requester,
-      notes,
-    };
-
-    unrestrictMutation.mutate(payload);
-  };
-
-  return (
-    <DialogRoot open={open} onOpenChange={(e) => !e.open && onClose()}>
-      <DialogContent bg="gray.800" color="white" rounded="xl" shadow="xl" maxW="640px">
-        <DialogHeader>
-          <DialogTitle>
-            Unrestrict Issuer - {issuer.validatedIssuerName ?? issuer.issuerName}
-          </DialogTitle>
-          <DialogCloseTrigger />
-        </DialogHeader>
-
-        <DialogBody>
-          <Field.Root mb={4}>
-            <Field.Label>Restriction Category</Field.Label>
-            <Input value={issuer.restrictionCategory?.name ?? ''} isReadOnly />
-          </Field.Root>
-
-          <Field.Root mb={4}>
-            <Field.Label>Restriction End Date</Field.Label>
-            <Input
-              type="date"
-              value={dateUnrestricted}
-              onChange={(e) => setDateUnrestricted(e.target.value)}
-            />
-          </Field.Root>
-
-          <Field.Root mb={4}>
-            <Field.Label>Requester for Un-restriction</Field.Label>
-            <Input
-              placeholder="Enter requester name"
-              value={requester}
-              onChange={(e) => setRequester(e.target.value)}
-            />
-          </Field.Root>
-
-          <Field.Root mb={2}>
-            <Field.Label>Un-restriction Notes</Field.Label>
-            <Textarea
-              placeholder="Enter notes (optional)"
-              value={notes}
-              onChange={(e) => setNotes(e.target.value)}
-              minH="80px"
-            />
-          </Field.Root>
-
-          <Box mt={2}>
-            <Text fontSize="sm" color="fg.muted">
-              Issuer: {issuer.issuerName} • Instrument: {issuer.instrumentType} •
-              Restricted On: {issuer.restrictedOn ?? 'N/A'}
-            </Text>
-          </Box>
-        </DialogBody>
-
-        <DialogFooter>
-          <HStack justify="flex-end" gap={3}>
-            <Button onClick={onClose} variant="outline" colorScheme="gray">
-              Cancel
-            </Button>
-            <Button
-              colorScheme="green"
-              onClick={handleSubmit}
-              loading={unrestrictMutation.isPending ?? unrestrictMutation.isLoading}
-            >
-              Unrestrict Issuer
-            </Button>
-          </HStack>
-        </DialogFooter>
-      </DialogContent>
-    </DialogRoot>
-  );
-}
+const getRoutes = useCallback(() => {
+     
+    return routes;
+  })
